--- a/index.html
+++ b/index.html
@@ -1,138 +1,176 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>SeeBee — Rastreador de ninhos</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>SeeBee — Meliponicultura</title>
 
-    <link rel="stylesheet" href="./css/style.css" />
+  <link rel="manifest" href="./manifest.webmanifest" />
+  <meta name="theme-color" content="#0b1220" />
 
-    <!-- Leaflet -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""
-    />
-  </head>
+  <link rel="stylesheet" href="./css/style.css" />
 
-  <body>
-    <header class="topbar">
-      <div class="brand">
-        <div class="brand_logo">🐝</div>
+  <!-- Leaflet -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
+</head>
+
+<body>
+  <header class="topbar">
+    <div class="topbar_left">
+      <div class="brand brand_center" id="brandCenter">
+        <div class="brand_logo" aria-hidden="true"></div>
         <div class="brand_text">
           <div class="brand_title">SeeBee</div>
-          <div class="brand_subtitle">Rastreador de ninhos</div>
+          <div class="brand_subtitle">Meliponicultura</div>
         </div>
       </div>
+    </div>
 
-      <div class="topbar_right">
-        <div id="userEmail" class="user_email"></div>
-        <button id="btnLogout" class="btn btn_ghost">Sair</button>
+    <div class="topbar_right">
+      <div class="userpill" id="userPill" hidden>
+        <span id="userEmail"></span>
       </div>
-    </header>
+      <button class="btn btn_ghost" id="btnLogout" hidden>Sair</button>
+    </div>
+  </header>
 
-    <main class="shell">
-      <!-- AUTH -->
-      <section id="authScreen" class="auth_screen">
-        <div class="auth_card">
-          <h2>Entrar</h2>
-          <p>Use seu e-mail e senha (Supabase Auth).</p>
+  <main class="container">
+    <!-- LOGIN -->
+    <section class="card auth" id="authView">
+      <h1>Entrar</h1>
+      <p class="muted">Use seu e-mail e senha (Supabase Auth) ou Google.</p>
 
-          <label class="field">
-            <span>E-mail</span>
-            <input id="loginEmail" type="email" placeholder="seuemail@..." />
-          </label>
+      <form id="loginForm" class="form">
+        <label>
+          <span>E-mail</span>
+          <input id="loginEmail" type="email" autocomplete="email" placeholder="seuemail@..." required />
+        </label>
 
-          <label class="field">
-            <span>Senha</span>
-            <input id="loginPass" type="password" placeholder="••••••••" />
-          </label>
+        <label>
+          <span>Senha</span>
+          <input id="loginPassword" type="password" autocomplete="current-password" placeholder="••••••••" required />
+        </label>
+
+        <div class="row gap">
+          <button class="btn btn_primary" type="submit" id="btnLogin">Entrar</button>
+          <button class="btn btn_soft" type="button" id="btnGoSignup">Criar conta</button>
+        </div>
+
+        <div class="divider"></div>
+
+        <button class="btn btn_google" type="button" id="btnGoogle">
+          Entrar com Google
+        </button>
+
+        <div class="msg" id="authMsg" aria-live="polite"></div>
+      </form>
+
+      <form id="signupForm" class="form" hidden>
+        <h2>Criar conta</h2>
+
+        <label>
+          <span>E-mail</span>
+          <input id="signupEmail" type="email" autocomplete="email" placeholder="seuemail@..." required />
+        </label>
+
+        <label>
+          <span>Senha</span>
+          <input id="signupPassword" type="password" autocomplete="new-password" placeholder="mínimo 6 caracteres" required />
+        </label>
+
+        <div class="row gap">
+          <button class="btn btn_primary" type="submit" id="btnSignup">Criar</button>
+          <button class="btn btn_soft" type="button" id="btnBackLogin">Voltar</button>
+        </div>
+
+        <div class="msg" id="signupMsg" aria-live="polite"></div>
+      </form>
+    </section>
+
+    <!-- APP -->
+    <section class="appgrid" id="appView" hidden>
+      <div class="leftcol">
+        <section class="card">
+          <h2>Trajeto</h2>
+          <p class="muted">Inicie o trajeto e marque ninhos com observação e foto.</p>
 
           <div class="row gap">
-            <button id="btnLogin" class="btn btn_primary">Entrar</button>
-            <button id="btnSignup" class="btn btn_soft">Criar conta</button>
+            <button class="btn btn_primary" id="btnStartRoute">Iniciar trajeto</button>
+            <button class="btn btn_soft" id="btnFinishRoute" disabled>Finalizar trajeto</button>
           </div>
 
-          <div id="authMsg" class="msg"></div>
-        </div>
-      </section>
-
-      <!-- APP -->
-      <section id="appScreen" class="app_screen hidden">
-        <div class="grid">
-          <div class="col_left">
-            <section class="card">
-              <h3>Trajeto</h3>
-              <p class="muted">Inicie o trajeto e depois marque ninhos com observação e foto.</p>
-
-              <div class="row gap">
-                <button id="btnStartRoute" class="btn btn_primary">Iniciar trajeto</button>
-                <button id="btnFinishRoute" class="btn btn_soft" disabled>Finalizar trajeto</button>
-              </div>
-
-              <div class="stats">
-                <div class="stat">
-                  <div class="stat_label">Distância</div>
-                  <div id="statDistance" class="stat_value">0 m</div>
-                </div>
-                <div class="stat">
-                  <div class="stat_label">Última posição</div>
-                  <div id="statPos" class="stat_value">—</div>
-                </div>
-              </div>
-
-              <div id="routeMsg" class="msg"></div>
-            </section>
-
-            <section class="card">
-              <h3>Marcar ninho</h3>
-
-              <label class="field">
-                <span>Observação</span>
-                <input id="nestObs" type="text" placeholder="Ex.: entrada ativa, árvore X, sombra, sinais..." />
-              </label>
-
-              <label class="field">
-                <span>Status</span>
-                <select id="nestStatus">
-                  <option value="DEPLOYED">DEPLOYED</option>
-                  <option value="PLANNED">PLANNED</option>
-                  <option value="OCCUPIED">OCCUPIED</option>
-                  <option value="REMOVED">REMOVED</option>
-                  <option value="REDEPLOYED">REDEPLOYED</option>
-                  <option value="FAILED">FAILED</option>
-                  <option value="UNKNOWN">UNKNOWN</option>
-                </select>
-              </label>
-
-              <label class="field">
-                <span>Foto (opcional)</span>
-                <input id="nestPhoto" type="file" accept="image/*" capture="environment" />
-              </label>
-
-              <button id="btnMarkNest" class="btn btn_primary" disabled>Marcar ninho</button>
-
-              <div id="nestMsg" class="msg"></div>
-            </section>
+          <div class="stats">
+            <div class="stat">
+              <div class="label">Distância</div>
+              <div class="value" id="distValue">0 m</div>
+            </div>
+            <div class="stat">
+              <div class="label">Última posição</div>
+              <div class="value mono" id="posValue">-</div>
+            </div>
           </div>
 
-          <div class="col_right">
-            <section class="map_card">
-              <div id="map" class="map"></div>
-            </section>
-          </div>
-        </div>
-      </section>
-    </main>
+          <div class="hint" id="routeHint"></div>
+        </section>
 
-    <!-- Leaflet -->
-    <script
-      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-      crossorigin=""
-    ></script>
+        <section class="card">
+          <h2>Marcar ninho</h2>
 
-    <script type="module" src="./src/main.js"></script>
-  </body>
+          <label class="labelblock">
+            <span>Observação</span>
+            <input id="nestObs" type="text" placeholder="Ex.: entrada ativa, árvore X, sombra, sinais..." />
+          </label>
+
+          <label class="labelblock">
+            <span>Status</span>
+            <select id="nestStatus">
+              <option value="DEPLOYED">DEPLOYED</option>
+              <option value="CAPTURED">CAPTURED</option>
+              <option value="FAILED">FAILED</option>
+            </select>
+          </label>
+
+          <label class="labelblock">
+            <span>Foto (opcional)</span>
+            <input id="nestPhoto" type="file" accept="image/*" />
+          </label>
+
+          <button class="btn btn_primary full" id="btnMarkNest" disabled>Marcar ninho</button>
+
+          <div class="msg" id="nestMsg" aria-live="polite"></div>
+        </section>
+
+        <section class="card">
+          <h2>Registros desta trilha</h2>
+          <p class="muted">As fotos/ninhos marcados aparecem aqui para você conferir.</p>
+          <div class="thumbs" id="thumbs"></div>
+        </section>
+      </div>
+
+      <div class="mapcol">
+        <section class="card mapcard">
+          <div id="map"></div>
+          <div class="mapbadge" id="mapBadge">Mapa pronto</div>
+        </section>
+      </div>
+    </section>
+  </main>
+
+  <!-- Leaflet -->
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""
+  ></script>
+
+  <!-- Supabase JS v2 -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <script type="module" src="./src/main.js"></script>
+</body>
 </html>
