--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         </div>
 
         <nav class="drawer__nav">
-          <button id="navHome" class="navItem navItem--active">Trajeto</button>
-          <button id="navInstalacoes" class="navItem">Minhas instalações</button>
+          <button id="navHome" class="navItem navItem--active">Trilhas</button>
+          <button id="navInstalacoes" class="navItem">Meus ninhos</button>
           <button id="navProfile" class="navItem">Meus dados</button>
+
         </nav>
 
         <div class="drawer__footer">
